Fix overflow issue
It manifested on mobile with the screen jerking around.

--- a/main.css
+++ b/main.css
@@ -45,6 +45,7 @@ body{
 #wrapper{
     height:15vh;
     padding:20px;
+    overflow:hidden;
 }
 
 #feeling-lucky{
